# agentic-orchestration

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  PRD.md  README.md  TODO.md  VERCEL.md  index.html  pyproject.toml  requirements.txt  start_api.sh  start_server.sh  test_yutori.py  vercel.json  video-showcase.html
.claude/: ralph-loop.local.md
api/: generate.py  health.py  index.py  jobs.py  requirements.txt
api/status/: [job_id].py
assets/: README.md
frontend/: index.html  video-showcase.html
output/: showcase-config.json
output/globalhario.com_products_coffee-syphon-next/: README.md  prompt.md
output/ilce7m5mb-20260116-140552/: README.md
output/patagonia.com_product_womens-r1-air-fleece-midlayer-full-zip-hoody_40261.html/: README.md  prompt.md
output/pioneerdjstore.com_products_ddj-flx10/: README.md  prompt.md
output/pioneerdjstore.com_products_ddj-rev1/: README.md  prompt.md
output/pioneerdjstore.com_products_ddj-rev7/: README.md  prompt.md
output/pioneerdjstore.com_products_ddj-xp2/: README.md  prompt.md
output/pioneerdjstore.com_products_xdj-700/: README.md  prompt.md
output/wusthof.com_products_wusthof-gourmet-8-cooks-knife-1025044820/: README.md  prompt.md
output/www.apple.com_apple-vision-pro/: README.md  prompt.md
output/www.audiusa.com_en_models_r8_r8-heritage_2024_overview/: README.md  prompt.md
output/www.bmwusa.com_legacy-vehicles_i8.html/: README.md  prompt.md
output/www.gaggia-na.com_collections_espresso-machines_products_gaggia-classic-pro/: README.md  prompt.md
tests/: __init__.py  test_research_agent.py
(+22 files in other folders)
